[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI/settings.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/LuckiestGuy-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/DarkPlane.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[node name="Settings" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -655.0
margin_top = -517.0
margin_right = 655.0
margin_bottom = 517.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -649.0
margin_top = -520.0
margin_right = 649.0
margin_bottom = 520.0

[node name="TabContainer" type="TabContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -607.0
margin_top = -437.0
margin_right = 607.0
margin_bottom = 471.0
custom_fonts/font = SubResource( 1 )

[node name="Game" type="Tabs" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 61.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/TabContainer/Game"]
margin_left = 28.0
margin_top = 27.0
margin_right = 1185.0
margin_bottom = 823.0

[node name="GridContainer" type="GridContainer" parent="Panel/TabContainer/Game/MarginContainer"]
margin_right = 1157.0
margin_bottom = 796.0
columns = 2

[node name="ModeLabel" type="Label" parent="Panel/TabContainer/Game/MarginContainer/GridContainer"]
margin_right = 439.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "Choose difficulty"

[node name="ModeBtn" type="OptionButton" parent="Panel/TabContainer/Game/MarginContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 1040.0
margin_right = 1157.0
margin_bottom = 59.0
size_flags_horizontal = 10
theme = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Easy"
items = [ "Easy", null, false, 0, null, "Medium", null, false, 1, null, "Hard", null, false, 2, null, "Expert", null, false, 3, null ]
selected = 0

[node name="Display" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 61.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/TabContainer/Display"]
margin_left = 28.0
margin_top = 27.0
margin_right = 1185.0
margin_bottom = 823.0

[node name="GridContainer" type="GridContainer" parent="Panel/TabContainer/Display/MarginContainer"]
margin_right = 1157.0
margin_bottom = 796.0
columns = 2

[node name="FullscreenLabel" type="Label" parent="Panel/TabContainer/Display/MarginContainer/GridContainer"]
margin_right = 466.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "Toggle fullscreen"

[node name="FullscreenBtn" type="CheckButton" parent="Panel/TabContainer/Display/MarginContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 1103.0
margin_right = 1157.0
margin_bottom = 59.0
size_flags_horizontal = 10

[node name="ResolutionLabel" type="Label" parent="Panel/TabContainer/Display/MarginContainer/GridContainer"]
visible = false
margin_top = 63.0
margin_right = 466.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 2 )
text = "Change resolution"
__meta__ = {
"_editor_description_": "This setting is very weird and barely works :)"
}

[node name="ResolutionBtn" type="OptionButton" parent="Panel/TabContainer/Display/MarginContainer/GridContainer"]
unique_name_in_owner = true
visible = false
margin_left = 966.0
margin_top = 63.0
margin_right = 1157.0
margin_bottom = 122.0
size_flags_horizontal = 10
theme = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "640x360"
items = [ "640x360", null, false, 0, null, "1280x720", null, false, 1, null, "1920x1080", null, false, 3, null, "2340x1080", null, false, 4, null ]
selected = 0

[node name="VsyncLabel" type="Label" parent="Panel/TabContainer/Display/MarginContainer/GridContainer"]
margin_right = 466.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "Enable vsync"

[node name="VsyncBtn" type="CheckButton" parent="Panel/TabContainer/Display/MarginContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 1103.0
margin_right = 1157.0
margin_bottom = 59.0
size_flags_horizontal = 10

[node name="Sound" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 61.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/TabContainer/Sound"]
margin_left = 44.0
margin_top = 27.0
margin_right = 1179.0
margin_bottom = 823.0

[node name="GridContainer" type="GridContainer" parent="Panel/TabContainer/Sound/MarginContainer"]
margin_right = 1135.0
margin_bottom = 796.0
size_flags_horizontal = 5
columns = 2

[node name="MasterLabel" type="Label" parent="Panel/TabContainer/Sound/MarginContainer/GridContainer"]
margin_right = 393.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Panel/TabContainer/Sound/MarginContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 835.0
margin_right = 1135.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 10
min_value = 0.1
max_value = 99.9
step = 0.1
value = 50.0

[node name="MusicLabel" type="Label" parent="Panel/TabContainer/Sound/MarginContainer/GridContainer"]
margin_top = 63.0
margin_right = 393.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 2 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Panel/TabContainer/Sound/MarginContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 835.0
margin_top = 63.0
margin_right = 1135.0
margin_bottom = 113.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 10
min_value = 0.1
max_value = 99.9
step = 0.1
value = 50.0

[node name="SfxLabel" type="Label" parent="Panel/TabContainer/Sound/MarginContainer/GridContainer"]
margin_top = 126.0
margin_right = 393.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 2 )
text = "Sound effects"

[node name="SfxSlider" type="HSlider" parent="Panel/TabContainer/Sound/MarginContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 835.0
margin_top = 126.0
margin_right = 1135.0
margin_bottom = 176.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 10
min_value = 0.1
max_value = 99.9
step = 0.1
value = 50.0

[connection signal="item_selected" from="Panel/TabContainer/Game/MarginContainer/GridContainer/ModeBtn" to="." method="_on_ModeBtn_item_selected"]
[connection signal="toggled" from="Panel/TabContainer/Display/MarginContainer/GridContainer/FullscreenBtn" to="." method="_on_FullscreenBtn_toggled"]
[connection signal="item_selected" from="Panel/TabContainer/Display/MarginContainer/GridContainer/ResolutionBtn" to="." method="_on_ResolutionBtn_item_selected"]
[connection signal="toggled" from="Panel/TabContainer/Display/MarginContainer/GridContainer/VsyncBtn" to="." method="_on_VsyncBtn_toggled"]
[connection signal="value_changed" from="Panel/TabContainer/Sound/MarginContainer/GridContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Sound/MarginContainer/GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Sound/MarginContainer/GridContainer/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
